--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "precommit": "NODE_ENV=production lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.{js,jsx}": [
-      "pretty-quick --staged",
-      "eslint src/ --fix",
+    "*.{js,json,css,md}": [
+      "prettier --write",
       "git add"
     ]
   },
