--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "security-timeline",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shaansen.github.io/SecurityTimeline",
   "dependencies": {
     "antd": "^3.16.2",
     "react": "^16.8.6",
@@ -9,6 +10,8 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +37,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
