--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-visibility-sensor": "^5.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
