--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-visibility-sensor": "^5.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
